syntax = "proto3";

package event;

service EventService {
  rpc CreateEvent (CreateEventRequest) returns (EventResponse);
  rpc UpdateEvent (UpdateEventRequest) returns (EventResponse);
  rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse);
  rpc ListEvent (ListEventRequest) returns (ListEventResponse);
}

message CreateEventRequest {
  string name = 1;
  string description = 2;
  string startDate = 3;
  string endDate = 4;
  string location = 5;
}

message UpdateEventRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string startDate = 4;
  string endDate = 5;
  string location = 6;
}

message DeleteEventRequest {
  string id = 1;
}

message ListEventRequest {
  enum Order {
    asc = 0;
    desc = 1;
  }
  enum OrderBy {
    startDate = 0;
    endDate = 1;
    name = 2;
    createdAt = 3;
  }
  string q = 1;
  string start = 2;
  string end = 3;
  Order order = 4;
  OrderBy orderBy = 5;
  int32 page = 6;
  int32 limit = 7;
}

message EventResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string startDate = 4;
  string endDate = 5;
  string location = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message DeleteEventResponse {
  string message = 1;
}

message ListEventResponse {
  repeated EventResponse events = 1;
  int32 total = 2;
}
